unpackaged/objects/Tournament__c.object
<CustomObject>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 x 1</fullName>
                </value>
                <value>
                    <fullName>2 x 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
                <value>
                    <fullName>Single Elimination</fullName>
                </value>
                <value>
                    <fullName>Double Elimination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tournament</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>